Changed css a bit to fix an invisible link

--- a/themes/slender-custom/static/css/slender-base.css
+++ b/themes/slender-custom/static/css/slender-base.css
@@ -14,18 +14,6 @@ body {
     margin: 0;
 }
 
-/* Container */
-
-.container {
-    min-height: calc(100vh - 68px);
-}
-
-.container:after {
-    content: "";
-    display: block;
-    height: 68px;
-}
-
 /* Navigation */
 
 nav ul {
@@ -62,11 +50,9 @@ h1.title {
     text-transform: uppercase;
     letter-spacing: 3px;
     text-align: center;
-    margin-top: 112px;
 }
 
 header p {
-    opacity: 0.8;
     font-size: 22px;
     text-align: center;
     margin-top: 30px;
